--- a/NoteApp/Base.lproj/Main.storyboard
+++ b/NoteApp/Base.lproj/Main.storyboard
@@ -136,8 +136,8 @@
                                 <rect key="frame" x="10" y="585.66666666666663" width="394" height="168.33333333333337"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="輸入回憶" translatesAutoresizingMaskIntoConstraints="NO" id="00F-zS-BUz">
-                                <rect key="frame" x="10" y="191.00000000000003" width="394" height="386.66666666666674"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="請輸入內容" translatesAutoresizingMaskIntoConstraints="NO" id="00F-zS-BUz">
+                                <rect key="frame" x="20" y="193.00000000000003" width="374" height="384.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
@@ -150,18 +150,18 @@
                             <constraint firstItem="jKS-At-cUY" firstAttribute="leading" secondItem="RQp-20-i3t" secondAttribute="leading" id="EhJ-Kg-XNZ"/>
                             <constraint firstItem="jKS-At-cUY" firstAttribute="bottom" secondItem="RQp-20-i3t" secondAttribute="bottom" id="I0n-rL-A73"/>
                             <constraint firstItem="DOs-SX-joi" firstAttribute="height" secondItem="RQp-20-i3t" secondAttribute="height" multiplier="1/4" id="NAC-pF-2v5"/>
-                            <constraint firstItem="00F-zS-BUz" firstAttribute="leading" secondItem="RQp-20-i3t" secondAttribute="leading" constant="10" id="SMh-pP-rqf"/>
-                            <constraint firstItem="RQp-20-i3t" firstAttribute="trailing" secondItem="00F-zS-BUz" secondAttribute="trailing" constant="10" id="U1e-Jf-gXw"/>
+                            <constraint firstItem="00F-zS-BUz" firstAttribute="top" secondItem="1P9-iV-obm" secondAttribute="bottom" constant="10" id="UdF-mI-7YD"/>
                             <constraint firstItem="jKS-At-cUY" firstAttribute="bottom" secondItem="RQp-20-i3t" secondAttribute="bottom" id="W1D-Ld-I1X"/>
                             <constraint firstItem="1P9-iV-obm" firstAttribute="leading" secondItem="RQp-20-i3t" secondAttribute="leading" constant="10" id="aOY-IC-Y4N"/>
                             <constraint firstItem="jKS-At-cUY" firstAttribute="trailing" secondItem="RQp-20-i3t" secondAttribute="trailing" id="dRI-PF-iuT"/>
                             <constraint firstItem="jKS-At-cUY" firstAttribute="trailing" secondItem="RQp-20-i3t" secondAttribute="trailing" id="dSC-Ys-C7e"/>
                             <constraint firstItem="1P9-iV-obm" firstAttribute="top" secondItem="RQp-20-i3t" secondAttribute="top" constant="10" id="eZi-wU-BPd"/>
                             <constraint firstItem="jKS-At-cUY" firstAttribute="top" secondItem="DOs-SX-joi" secondAttribute="bottom" constant="10" id="giP-YB-XZU"/>
+                            <constraint firstItem="DOs-SX-joi" firstAttribute="top" secondItem="00F-zS-BUz" secondAttribute="bottom" constant="8" id="jnt-oM-Ey5"/>
+                            <constraint firstItem="RQp-20-i3t" firstAttribute="trailing" secondItem="00F-zS-BUz" secondAttribute="trailing" constant="20" id="kag-yf-KwN"/>
+                            <constraint firstItem="00F-zS-BUz" firstAttribute="leading" secondItem="RQp-20-i3t" secondAttribute="leading" constant="20" id="lsH-QS-d1X"/>
                             <constraint firstItem="RQp-20-i3t" firstAttribute="trailing" secondItem="DOs-SX-joi" secondAttribute="trailing" constant="10" id="nOK-rr-JR7"/>
                             <constraint firstItem="RQp-20-i3t" firstAttribute="trailing" secondItem="1P9-iV-obm" secondAttribute="trailing" constant="10" id="om0-96-m48"/>
-                            <constraint firstItem="DOs-SX-joi" firstAttribute="top" secondItem="00F-zS-BUz" secondAttribute="bottom" constant="8" id="svP-7F-VeE"/>
-                            <constraint firstItem="00F-zS-BUz" firstAttribute="top" secondItem="1P9-iV-obm" secondAttribute="bottom" constant="8" id="tVd-27-3Au"/>
                             <constraint firstItem="DOs-SX-joi" firstAttribute="leading" secondItem="RQp-20-i3t" secondAttribute="leading" constant="10" id="woI-FS-y4B"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RQp-20-i3t"/>
@@ -191,7 +191,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="contentLabel" destination="00F-zS-BUz" id="3fS-go-LWf"/>
+                        <outlet property="contentTextView" destination="00F-zS-BUz" id="3fS-go-LWf"/>
                         <outlet property="imageView" destination="DOs-SX-joi" id="tT6-qu-lyY"/>
                         <outlet property="textView" destination="1P9-iV-obm" id="rMa-KN-lAL"/>
                         <outlet property="toolbar" destination="jKS-At-cUY" id="Vsw-7q-uOC"/>
@@ -239,30 +239,22 @@
                                 <rect key="frame" x="20" y="65" width="218" height="32"/>
                                 <segments>
                                     <segment title="寵物用品"/>
-                                    <segment title="寵物餐廳"/>
+                                    <segment title="動物醫院"/>
                                     <segment title="公園"/>
                                 </segments>
                                 <connections>
                                     <action selector="modeChanged:" destination="W5t-mj-7vh" eventType="valueChanged" id="j37-IY-evN"/>
                                 </connections>
                             </segmentedControl>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="9op-Kq-N4h">
-                                <rect key="frame" x="0.0" y="96" width="414" height="56"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="9op-Kq-N4h" firstAttribute="trailing" secondItem="d79-vn-cBl" secondAttribute="trailing" id="7L7-Yl-sc5"/>
                             <constraint firstItem="d79-vn-cBl" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="xkR-GL-f3n" secondAttribute="trailing" symbolic="YES" id="Cpa-N1-NYK"/>
                             <constraint firstItem="xkR-GL-f3n" firstAttribute="top" secondItem="d79-vn-cBl" secondAttribute="top" constant="21" id="GKf-Ii-zDU"/>
                             <constraint firstItem="8Jq-DW-rWK" firstAttribute="top" secondItem="zS5-Pg-TbJ" secondAttribute="top" id="JaP-xO-NFz"/>
-                            <constraint firstItem="9op-Kq-N4h" firstAttribute="leading" secondItem="d79-vn-cBl" secondAttribute="leading" id="Kho-vu-Srs"/>
                             <constraint firstItem="xkR-GL-f3n" firstAttribute="leading" secondItem="d79-vn-cBl" secondAttribute="leading" constant="20" id="Lyt-fO-Ha6"/>
                             <constraint firstItem="8Jq-DW-rWK" firstAttribute="leading" secondItem="d79-vn-cBl" secondAttribute="leading" id="Zdu-vA-W8t"/>
-                            <constraint firstItem="9op-Kq-N4h" firstAttribute="top" secondItem="xkR-GL-f3n" secondAttribute="bottom" id="bHy-cq-blk"/>
                             <constraint firstItem="8Jq-DW-rWK" firstAttribute="trailing" secondItem="d79-vn-cBl" secondAttribute="trailing" id="cSr-Ru-KKL"/>
-                            <constraint firstItem="9op-Kq-N4h" firstAttribute="top" secondItem="xkR-GL-f3n" secondAttribute="bottom" id="jZa-eY-X7s"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="d79-vn-cBl"/>
                     </view>
@@ -270,7 +262,6 @@
                     <navigationItem key="navigationItem" id="2eN-Nb-1Sg"/>
                     <connections>
                         <outlet property="mainMapView" destination="8Jq-DW-rWK" id="w3X-hY-D5a"/>
-                        <outlet property="searchBar" destination="9op-Kq-N4h" id="vRk-Gz-qLb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lbv-fs-Dpc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -297,7 +288,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8X-fZ-hb1">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8X-fZ-hb1">
                                         <rect key="frame" x="181" y="32.666666666666671" width="52" height="30.333333333333329"/>
                                         <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -312,7 +303,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dW-Et-phU">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dW-Et-phU">
                                                 <rect key="frame" x="140.66666666666669" y="0.0" width="132.66666666666669" height="30.666666666666668"/>
                                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
                                                 <nil key="textColor"/>
@@ -329,13 +320,13 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="90" translatesAutoresizingMaskIntoConstraints="NO" id="5cx-Dy-zIp">
                                         <rect key="frame" x="0.0" y="97.666666666666657" width="414" height="30.666666666666657"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="bd" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p55-HX-YdT">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p55-HX-YdT">
                                                 <rect key="frame" x="0.0" y="0.0" width="162" height="30.666666666666668"/>
                                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="25"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="home" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6F-Rl-srU">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6F-Rl-srU">
                                                 <rect key="frame" x="252" y="0.0" width="162" height="30.666666666666668"/>
                                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="25"/>
                                                 <nil key="textColor"/>
@@ -381,7 +372,7 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" alpha="0.80000000000000004" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fJr-mK-5Ve">
-                                <rect key="frame" x="67.666666666666671" y="753.33333333333337" width="52" height="51.333333333333371"/>
+                                <rect key="frame" x="67.666666666666671" y="753.33333333333337" width="52" height="51.333333333333414"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="fJr-mK-5Ve" secondAttribute="height" multiplier="50:51" id="YbG-AI-Rc2"/>
                                 </constraints>
@@ -652,7 +643,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Uu0-Lz-wfo"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Google Maps" id="9hb-ce-tcW"/>
+                    <tabBarItem key="tabBarItem" title="Google Maps" image="map" catalog="system" id="9hb-ce-tcW"/>
                     <connections>
                         <outlet property="mapView" destination="8rg-AJ-Zf3" id="ACN-d7-pgg"/>
                         <outlet property="textSearch" destination="8Se-TL-KM1" id="pWn-5R-HcJ"/>
