--- a/NoteApp/Base.lproj/Main.storyboard
+++ b/NoteApp/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -113,7 +114,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="jKS-At-cUY">
-                                <rect key="frame" x="0.0" y="764" width="414" height="49"/>
+                                <rect key="frame" x="0.0" y="769" width="414" height="44"/>
                                 <items>
                                     <barButtonItem systemItem="camera" id="0Cp-sC-6iY">
                                         <connections>
@@ -139,11 +140,11 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DOs-SX-joi">
-                                <rect key="frame" x="10" y="585.66666666666663" width="394" height="168.33333333333337"/>
+                                <rect key="frame" x="10" y="590.66666666666663" width="394" height="168.33333333333337"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="輸入回憶" translatesAutoresizingMaskIntoConstraints="NO" id="00F-zS-BUz">
-                                <rect key="frame" x="20" y="191.00000000000003" width="374" height="386.66666666666674"/>
+                                <rect key="frame" x="20" y="191.00000000000003" width="374" height="391.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
@@ -207,6 +208,127 @@
             </objects>
             <point key="canvasLocation" x="1849.2753623188407" y="-541.07142857142856"/>
         </scene>
+        <!--天氣-->
+        <scene sceneID="Nwy-7C-dKb">
+            <objects>
+                <viewController id="Lr7-wR-8La" customClass="WeatherViewController" customModule="NoteApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DUU-Lk-7cX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="氣溫" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1A7-di-bXQ">
+                                <rect key="frame" x="223" y="398" width="171" height="142"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="bottom" spacing="143" translatesAutoresizingMaskIntoConstraints="NO" id="z0g-7U-cM4">
+                                <rect key="frame" x="10" y="57" width="395" height="333"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="87" translatesAutoresizingMaskIntoConstraints="NO" id="VF5-v4-j5e">
+                                        <rect key="frame" x="0.0" y="0.0" width="395" height="40"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q9A-Xh-OAl">
+                                                <rect key="frame" x="0.0" y="1" width="40" height="38.666666666666671"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="40" id="Wxq-bl-iDf"/>
+                                                    <constraint firstAttribute="height" constant="40" id="Zp7-AD-w8g"/>
+                                                </constraints>
+                                                <state key="normal" backgroundImage="location.circle" catalog="system"/>
+                                                <connections>
+                                                    <action selector="locationPressed:" destination="Lr7-wR-8La" eventType="touchUpInside" id="W21-YL-zct"/>
+                                                </connections>
+                                            </button>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="City Name" textAlignment="right" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="jCf-Uw-SXi">
+                                                <rect key="frame" x="127" y="0.0" width="141" height="40"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                <textInputTraits key="textInputTraits" returnKeyType="go"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="faN-EQ-gKY">
+                                                <rect key="frame" x="355" y="1" width="40" height="37.666666666666671"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="M8S-gi-oGh"/>
+                                                    <constraint firstAttribute="width" constant="40" id="x9R-Zx-Kn5"/>
+                                                </constraints>
+                                                <state key="normal" backgroundImage="magnifyingglass" catalog="system"/>
+                                                <connections>
+                                                    <action selector="searchPressed:" destination="Lr7-wR-8La" eventType="touchUpInside" id="6cW-ND-qJw"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3rf-BD-LDH">
+                                        <rect key="frame" x="245" y="183" width="150" height="150"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="gf3-Vz-3CB"/>
+                                            <constraint firstAttribute="height" constant="150" id="jW1-bb-IAB"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="城市" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Cj-td-YYu">
+                                <rect key="frame" x="20" y="398" width="145" height="155"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="r5p-ci-5Ey"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="天氣" id="Rw9-Vp-Mq2"/>
+                    <connections>
+                        <outlet property="cityLabel" destination="3Cj-td-YYu" id="iP9-Eg-exo"/>
+                        <outlet property="conditionImageView" destination="3rf-BD-LDH" id="VZg-JV-EWz"/>
+                        <outlet property="searchTextField" destination="jCf-Uw-SXi" id="2uE-aj-mU1"/>
+                        <outlet property="temperatureLabel" destination="1A7-di-bXQ" id="LVG-09-N5I"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uzL-mZ-lmC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2055.072463768116" y="-499.55357142857139"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="iII-9I-ejC">
+            <objects>
+                <viewController id="3xW-iF-sUw" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="TQx-Zv-5y4">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="MSs-tu-v0F">
+                                <rect key="frame" x="0.0" y="64" width="414" height="798"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="GOu-dG-qXT">
+                                    <size key="itemSize" width="171" height="177"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="CAj-fl-J5w" customClass="CollectionViewCell" customModule="NoteApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="181" height="201"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="G6n-ht-bYJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="181" height="201"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="181" height="201"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="j1o-i6-9H6"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uNE-dB-zO9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1400" y="-1142"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Edk-Lo-K2H">
             <objects>
@@ -221,6 +343,7 @@
                         <segue destination="J9e-pq-82g" kind="relationship" relationship="viewControllers" id="Ez4-Ks-tKy"/>
                         <segue destination="W5t-mj-7vh" kind="relationship" relationship="viewControllers" id="KfD-zh-hXS"/>
                         <segue destination="o2A-nj-3Qq" kind="relationship" relationship="viewControllers" id="Z1Z-OD-ovh"/>
+                        <segue destination="Lr7-wR-8La" kind="relationship" relationship="viewControllers" id="VLX-0N-OMG"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wOL-3i-7Bw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -663,7 +786,6 @@
         <!--日曆-->
         <scene sceneID="GqS-DE-Unz">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dIH-jc-NOn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="dRA-Uf-u4F" customClass="FSCalendarViewController" customModule="NoteApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BZX-1h-L2m">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -676,15 +798,16 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="pl8-Zk-wdU" firstAttribute="bottom" secondItem="YRu-yk-Cs8" secondAttribute="bottom" constant="189" id="Bjy-ur-aLN"/>
-                            <constraint firstItem="YRu-yk-Cs8" firstAttribute="leading" secondItem="pl8-Zk-wdU" secondAttribute="leading" constant="20" id="Hsw-W2-0Az"/>
-                            <constraint firstItem="YRu-yk-Cs8" firstAttribute="top" secondItem="pl8-Zk-wdU" secondAttribute="top" constant="24" id="f1g-RL-v0N"/>
-                            <constraint firstItem="pl8-Zk-wdU" firstAttribute="trailing" secondItem="YRu-yk-Cs8" secondAttribute="trailing" constant="20" id="of0-af-MeX"/>
+                            <constraint firstItem="YRu-yk-Cs8" firstAttribute="leading" secondItem="pl8-Zk-wdU" secondAttribute="leading" constant="20" id="SVL-Eq-kE7"/>
+                            <constraint firstItem="pl8-Zk-wdU" firstAttribute="trailing" secondItem="YRu-yk-Cs8" secondAttribute="trailing" constant="20" id="dEy-Zy-CTy"/>
+                            <constraint firstItem="YRu-yk-Cs8" firstAttribute="top" secondItem="pl8-Zk-wdU" secondAttribute="top" constant="24" id="fRc-KY-kph"/>
+                            <constraint firstItem="pl8-Zk-wdU" firstAttribute="bottom" secondItem="YRu-yk-Cs8" secondAttribute="bottom" constant="189" id="iz3-jS-ecS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="pl8-Zk-wdU"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="日曆" image="goforward.60.hi" catalog="system" id="Zlq-4o-Bst"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dIH-jc-NOn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-759" y="479"/>
         </scene>
@@ -713,6 +836,8 @@
         <image name="camera.circle.fill" catalog="system" width="128" height="121"/>
         <image name="goforward.60.hi" catalog="system" width="121" height="128"/>
         <image name="house" catalog="system" width="128" height="110"/>
+        <image name="location.circle" catalog="system" width="128" height="121"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="map" catalog="system" width="128" height="113"/>
         <image name="photo" catalog="system" width="128" height="93"/>
         <image name="plus.circle.fill" catalog="system" width="128" height="121"/>
